infra/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-hub
  labels:
    app: backstage-hub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backstage-hub
  template:
    metadata:
      labels:
        app: backstage-hub
    spec:
      containers:
        - name: backstage
          image: gcr.io/validid-governodigital-sandbox/backstage-hub:latest
          imagePullPolicy: Always
          command:
            - node
            - packages/backend
            - --config
            - app-config.yaml
            - --config
            - app-config.gke.yaml
          ports:
            - containerPort: 7007
              name: http
          startupProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: 7007
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /.backstage/health/v1/liveness
              port: 7007
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /.backstage/health/v1/readiness
              port: 7007
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-hub
  labels:
    app: backstage-hub
  annotations:
    cloud.google.com/backend-config: '{"default": "backstage-hub-backend-config"}'
spec:
  selector:
    app: backstage-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7007
      name: http
